[gd_scene load_steps=8 format=2]

[ext_resource path="res://RES_ENEMY/arm_greenA.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Mob.gd" type="Script" id=2]
[ext_resource path="res://Scenes/AttachPickup.tscn" type="PackedScene" id=3]
[ext_resource path="res://RES_ENEMY/eye_angry_blue.png" type="Texture" id=4]
[ext_resource path="res://RES_ENEMY/mouthD.png" type="Texture" id=5]
[ext_resource path="res://RES_ENEMY/body_greenB.png" type="Texture" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 20.0
height = 0.0

[node name="Mob" type="KinematicBody2D"]
collision_mask = 0
script = ExtResource( 2 )
pickup_scene = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 1, 0, 0, 1 )
scale = Vector2( 0.8, 0.8 )

[node name="Sprite" type="Sprite" parent="Sprite"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 6 )

[node name="Sprite2" type="Sprite" parent="Sprite"]
position = Vector2( 25, 7 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="Sprite4" type="Sprite" parent="Sprite"]
position = Vector2( -31, -4 )
rotation = 2.62323
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="Sprite"]
position = Vector2( 0, -3 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )

[node name="Sprite5" type="Sprite" parent="Sprite"]
position = Vector2( 0, 11 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.8, 0.8 )
shape = SubResource( 1 )

[node name="DyingTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="DyingTimer" to="." method="_on_DyingTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
